--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </script>
 
 
-<link rel="stylesheet" href="/Users/yuchenwang/Documents/wangyuchen.github.io/css/blog.css" type="text/css" />
+<link rel="stylesheet" href="blog.css" type="text/css" />
 
 </head>
 
