fix relative links

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@ img {
 <ol style="list-style-type: decimal">
 <li>Nonlinear Regression
 <ol style="list-style-type: decimal">
-<li><a href="/chap4-1.html">Nonlinear Regression (Starting Values Available)</a></li>
-<li><a href="/chap4-2.html">Nonlinear Regression (Grid-Search)</a></li>
+<li><a href="chap4-1.html">Nonlinear Regression (Starting Values Available)</a></li>
+<li><a href="chap4-2.html">Nonlinear Regression (Grid-Search)</a></li>
 </ol></li>
 <li>Generalized Linear Models
 <ol style="list-style-type: decimal">
-<li><a href="/chap5-1.html">Logistic Regression (Single-Trial Data)</a></li>
+<li><a href="chap5-1.html">Logistic Regression (Single-Trial Data)</a></li>
 </ol></li>
 </ol>
 
